ISSUE-0. Dev. skill issue * 2
